# st-clients

rest/haskell/Socialtext-Resting/: README  Socialtext.cabal
rest/haskell/Socialtext-Resting/Socialtext/Resting/: HTTP.hs
rest/perl/Socialtext-Resting/: Changes
rest/perl/Socialtext-Resting-Utils/: .gitignore  Changes  Makefile.PL
rest/perl/Socialtext-Resting-Utils/debian/: changelog  control
rest/perl/Socialtext-Resting-Utils/lib/Socialtext/: EditPage.pm
rest/perl/Socialtext-Resting-Utils/lib/Socialtext/Resting/: DefaultRester.pm  Getopt.pm  Utils.pm
rest/perl/Socialtext-Resting-Utils/t/: getopt.t  rester.conf
rest/perl/Socialtext-Resting/debian/: changelog
rest/perl/Socialtext-Resting/lib/Socialtext/: Resting.pm
rest/perl/Socialtext-Resting/t/: resting-mocked.t  resting.t
rest/perl/Socialtext-WikiTest/: Changes  Makefile.PL
rest/perl/Socialtext-WikiTest/debian/: changelog
rest/perl/Socialtext-WikiTest/lib/Socialtext/: WikiFixture.pm  WikiTest.pm
rest/perl/Socialtext-WikiTest/lib/Socialtext/WikiFixture/: HTTP.pm  Selenese.pm
rest/perl/Socialtext-WikiTest/lib/Socialtext/WikiObject/: TestPlan.pm
rest/perl/wikrad/: Changes  test-wikrad
rest/perl/wikrad/debian/: changelog
rest/perl/wikrad/lib/Socialtext/: Wikrad.pm
rest/perl/wikrad/lib/Socialtext/Wikrad/: Window.pm
