Name: Socialtext-Resting
Version: 0.1.1
License: OtherLicense
License-File: LICENSE
Author: Matthew O'Connor <matthew.oconnor@socialtext.com>
Maintainer: Audrey Tang <audrey.tang@socialtext.com>
Synopsis: Library to access Socialtext REST API.
Build-Type: Simple
Build-Depends:
    base >= 3,
    haskell98,
    directory,
    HTTP >= 4000,
    mtl,
    base64-string,
    network
Exposed-modules:
    Socialtext.Resting,
    Socialtext.Resting.Config.CommandLine,
    Socialtext.Resting.Config.File,
    Socialtext.Resting.Config.Types,
    Socialtext.Resting.Control,
    Socialtext.Resting.HTTP,
    Socialtext.Resting.MimeTypes,
    Socialtext.Resting.Page,
    Socialtext.Resting.Templates,
    Socialtext.Resting.Types,
    Socialtext.Resting.User,
    Socialtext.Resting.Settings,
    Socialtext.Resting.Workspace
